src/test/deca/syntax/invalid/created/testInclude/testCircularInclude.deca
// Description :
//    Test invalide : Tentative de faire un include circulaire
//
// Résultats :
//    Erreur syntaxique
//    Ligne 1: Circular include for file testCircularInclude.deca

#include "testCircularInclude.decah"